--- a/Responsive Web Design Projects/Build a Survey Form/css/style.css
+++ b/Responsive Web Design Projects/Build a Survey Form/css/style.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+
 html{
     background-color: blanchedalmond;
+    
 }
 div{
     color: royalblue;
+    font-family: 'Merriweather', serif;
 }
